Bug 60761 - [WK2] Missing 2nd #EOF if WebProcess is killed.
Summary: [WK2] Missing 2nd #EOF if WebProcess is killed.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-13 06:37 PDT by Zoltan Herczeg
Modified: 2011-05-13 10:42 PDT (History)
2 users (show)

See Also:


Attachments
patch (2.95 KB, patch)
2011-05-13 06:44 PDT, Zoltan Herczeg
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Zoltan Herczeg 2011-05-13 06:37:00 PDT
run-webkit-test sometimes stop when running WebKit2 tests, effectively killing WebKit2 build-bots. This is bad and needs fix.
Comment 1 Zoltan Herczeg 2011-05-13 06:44:23 PDT
Created attachment 93443 [details]
patch
Comment 2 Csaba Osztrogonác 2011-05-13 07:20:22 PDT
Great catch, r=me. It will solve a very old flakey bug. ;)
Comment 3 WebKit Commit Bot 2011-05-13 08:25:38 PDT
The commit-queue encountered the following flaky tests while processing attachment 93443 [details]:

java/lc3/JavaObject/JavaObjectToByte-006.html bug 60333 (author: ap@webkit.org)
The commit-queue is continuing to process your patch.
Comment 4 WebKit Commit Bot 2011-05-13 08:26:56 PDT
Comment on attachment 93443 [details]
patch

Clearing flags on attachment: 93443

Committed r86434: <http://trac.webkit.org/changeset/86434>
Comment 5 WebKit Commit Bot 2011-05-13 08:27:01 PDT
All reviewed patches have been landed.  Closing bug.
Comment 6 WebKit Commit Bot 2011-05-13 10:42:06 PDT
The commit-queue encountered the following flaky tests while processing attachment 93443 [details]:

http/tests/appcache/fail-on-update.html bug 57043 (author: ap@webkit.org)
The commit-queue is continuing to process your patch.