2011-05-13  Zoltan Herczeg  <zherczeg@webkit.org>

Reviewed by Csaba Osztrogonác.

        Missing 2nd #EOF if WebProcess is killed.
        https://bugs.webkit.org/show_bug.cgi?id=60761

        If the WebProcess is killed, only one #EOF is yielded
        by WebKitTestRunner. However, run-webkit-test wait for
        a second #EOF, which signals the finishing of pixel dump.
        Since this never happens, run-webkit-test waits forever.

        * WebKitTestRunner/TestInvocation.cpp:
        (WTR::TestInvocation::dump):
        (WTR::TestInvocation::didReceiveMessageFromInjectedBundle):
        * WebKitTestRunner/TestInvocation.h:

Canonical link: https://commits.webkit.org/76089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86434 268f45cc-cd09-0410-ab3c-d52691b4dbfc